[package]
name = "rb_tree"
version = "0.1.0"
edition = "2024"
description = "A basic Red-Black Tree."
authors = ["arichyx@qq.com"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.7.0"
rand = "0.9.2"

[[bench]]
name = "my_benchmark"
harness = false
